Safe for now.  Revision 9 of twos.

--- a/modules/authentication/views/confirm.html
+++ b/modules/authentication/views/confirm.html
@@ -1,5 +1,5 @@
 <h1>Success</h1>
 <p>Your device has been authorized.  You may now use CAM4TV on your AppleTV.</p>
-<p><a href="#/second_screen">Second Screen</a></a></p>
-<p><a href="#/logout">Logout</a></a></p>
+<p><a href="#/chat">Second Screen</a></a></p>
+<p><a ng-href="#" ng-click="logout()">Logout</a></a></p>
 <p><a ng-href="#" ng-click="printGlobals()">Print Globals</a></a></p>
